--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <section id="sec-one">
+    <section id="header-section">
       <div class="nav-bar">
         <div>
           <div class="logo-img">
@@ -33,7 +33,7 @@
           </ul>
         </div>
 
-        <button class="right-btn">Get Free Quotes</button>
+        <button class="quote-btn">Get Free Quotes</button>
         <i class="fa fa-bars hamburger">Menu</i>
       </div>
       <div class="container">
@@ -46,22 +46,26 @@
           <button class="btn-orng">Our Services</button>
         </div>
         <div class="img-div">
-          <img class="img0" src="./images/first.png" alt="background image" />
+          <img
+            class="banner-img"
+            src="./images/first.png"
+            alt="background image"
+          />
         </div>
       </div>
       <div class="flex-arrow">
         <img class="top-arrow" src="./images/top.png" />
       </div>
     </section>
-    <section id="sec-two">
-      <div class="margin-top2">
+    <section id="services-section">
+      <div>
         <h3>Our Services</h3>
       </div>
       <div class="center-text">
         <b> IT solutions for startup and enterprises </b>
       </div>
       <div class="margin-top"></div>
-      <div class="flex-box1">
+      <div class="flex-box-services">
         <div class="img-center">
           <i class="fa fa-building fa-3x"></i>
           <div class="big-text">Managed IT services</div>
@@ -85,15 +89,14 @@
             Naxly brings the power of data science and artificial intelligence
             to every business
           </div>
-          <br /><br /><br /><br /><br /><br />
         </div>
       </div>
     </section>
-    <section id="sec-three">
-      <div class="flex-box2">
+    <section id="features-section">
+      <div class="flex-box-features">
         <div class="width">
           <div class="padded-img rel">
-            <img class="sec3-img" src="./images/second.png" />
+            <img class="features-bg-img" src="./images/second.png" />
             <div class="notification">
               <div class="display-flex">
                 <img
@@ -138,7 +141,7 @@
         </div>
       </div>
     </section>
-    <section id="sec-four">
+    <section id="industries-section">
       <h3>Industries We Serve</h3>
       <div class="container">
         <div class="content2">IT services customized for your industry</div>
@@ -168,16 +171,16 @@
       <h1>Need a Technology support? <a href="#">Get Started Now</a></h1>
       <br /><br />
     </section>
-    <section id="sec-five">
+    <section id="business-section">
       <h1>ITKoI - Partner for Your Business</h1>
-      <div class="para">
+      <div class="paragraph">
         We understand the complexities of modern markets and translate them into
         real business solutions for automotive, financial, insurance, pharma &
         life sciences, and real estate with more to come
       </div>
       <div class="margin-top"></div>
       <button class="btn-red">Request a Quote</button>
-      <div class="num-flex">
+      <div class="flex-images">
         <div>
           <h2>2500+</h2>
           <p>We understand the complexities of modern markets</p>
@@ -194,11 +197,11 @@
       <br /><br /><br /><br /><br />
       <hr class="gray" />
     </section>
-    <section id="sec-six">
+    <section id="achievement-section">
       <h1>Some of Our Great Stuffs</h1>
-      <div class="num-flex">
+      <div class="flex-images">
         <div class="margin-2p">
-          <div class="bg-img1">
+          <div class="inspire1">
             <div class="pd-mid">
               <div class="dot"></div>
               Inspire
@@ -208,7 +211,7 @@
           <p><b>The Security Risks of Changing Package Owners</b></p>
         </div>
         <div class="margin-2p">
-          <div class="bg-img2">
+          <div class="inspire2">
             <div class="pd-mid">
               <div class="dot"></div>
               Inspire
@@ -218,7 +221,7 @@
           <p><b>The Security Risks of Changing Package Owners</b></p>
         </div>
         <div class="margin-2p">
-          <div class="bg-img3">
+          <div class="inspire3">
             <div class="pd-mid">
               <div class="dot"></div>
               Inspire
@@ -230,22 +233,21 @@
       </div>
       <br /><br /><br /><br />
     </section>
-    <section id="sec-seven">
+    <section id="solutions-section">
       <div class="flex-box3">
-        <div class="bg-img4">
+        <div class="solutions-bg-img">
           <img class="play-btn" src="./images/play.jpeg" />
-          <h1 class="para2">
+          <h1 class="paragraph2">
             Innovative IT Solution for your Business & Startup
           </h1>
           <div class="margin-top"></div>
           <button class="btn-white">Get Started Now</button>
         </div>
       </div>
-      <br /><br />
     </section>
-    <section id="sec-eight">
-      <div class="flex-box4">
-        <div class="first">
+    <section id="socials-section">
+      <div class="flex-box-socials">
+        <div class="logo-block">
           <div class="logo">
             <img src="./images/logo2.png" alt="logo" />
           </div>
@@ -259,7 +261,7 @@
           </div>
         </div>
 
-        <div class="second">
+        <div class="navigation-block">
           <div class="navi">
             <h1>Navigation</h1>
           </div>
@@ -271,13 +273,13 @@
             <p>Content</p>
           </div>
         </div>
-        <div class="third">
+        <div class="services-block">
           <div class="services">
             <h1>Services</h1>
           </div>
           <div class="list-items">
             <p>Drone Mapping</p>
-            <p>real State</p>
+            <p>Real State</p>
             <p>Commercial</p>
             <p>Construction</p>
           </div>
@@ -299,9 +301,9 @@
             ></i>
           </div>
           <div class="logos margin-top">
-            <i class="fa fa-facebook fa-lg"></i> &nbsp;&nbsp;&nbsp;
-            <i class="fa fa-instagram fa-lg"></i>&nbsp;&nbsp;&nbsp;
-            <i class="fa fa-linkedin fa-lg"></i>&nbsp;&nbsp;&nbsp;
+            <i class="fa fa-facebook fa-lg"></i>
+            <i class="fa fa-instagram fa-lg"></i>
+            <i class="fa fa-linkedin fa-lg"></i>
             <i class="fa fa-youtube fa-lg"></i>
           </div>
         </div>
